--- a/css/master.css
+++ b/css/master.css
@@ -5,12 +5,12 @@ html {
 }
 
 header {
-    padding: 16px;
-    background-color: #e0aaff;
+    padding: 0px;
+    margin-bottom: 20px;
    }
 
 nav {
-    background-color: purple;
+    background-color: #9B30F9;
     padding: 2px 12px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -22,11 +22,9 @@ body {
 }
 
 article {
-
-
     font-family: sans-serif;
     text-align: justify;
-    float:left;
+    /* float:left; */
 }
 
 aside {
@@ -69,7 +67,7 @@ ol {
 }
 
 .titulos1 {
-    color: purple;
+    color: #9B30F9;
 }
 
 .titulos2 {
@@ -160,14 +158,14 @@ margin-top: 110px ;
     box-shadow: 0px 0px 5px 3px #0a0a0a20;
     border-radius: 8px;
     padding: 16px;
-    border-left: 3px solid purple;
+    border-left: 3px solid #9B30F9;
     margin-bottom: 18px;
 }
 
 .titulo-card{
     margin: 0px 0px 6px 0px;
     font-size: 20px;
-    color: purple;
+    color: #9B30F9;
     font-weight: 500;
 }
 
@@ -183,16 +181,16 @@ margin-top: 110px ;
 }
 
 .article-ferramentas {
-    width: 500px;
-    margin: 10px 20px;
+    width: 470px;
+    margin: 10px 40px;
     font-family: sans-serif;
     text-align: justify;
     float:left;
 }
 
 .aside-ferramentas {
-    width: 280px;
-    margin: 76px 60px 0px 0px;
+    width: 260px;
+    margin: 76px 40px 0px 0px;
     font-family: sans-serif;
     text-align: justify;
     float: right;
